# Accesser

./: .gitignore  README.en.md  README.md  accesser.py  accesser.spec  buildexe.bat  config.json.default  pyproject.toml  requirements.txt  快速编辑cloaking-rules.bat  快速编辑config.bat  快速编辑pac.bat
accesser/: __init__.py  __main__.py  config.toml  pac
accesser/utils/: cert_verify.py  certmanager.py  importca.py  log.py  setting.py  sysproxy.py
dnscrypt/: cloaking-rules.txt  dnscrypt-proxy.toml
template/: index.html  pac
utils/: webui.py
